[Fix] password event format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <cal-login-form #loginForm 
     (login)="login($event)" 
     (forgottenPass)="forgottenPassword($event)" 
-    (sendFirstPass)="firstPassword()" 
-    (sendResetPass)="lostPassword()">
+    (sendFirstPass)="firstPassword($event)" 
+    (sendResetPass)="lostPassword($event)">
   </cal-login-form>
 </div>
