--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,15 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
 }
+
+// ----------------------------------------------------------------------------------------------
+// NOTE: Modal ----------------------------------------------------------------------------------
+// ----------------------------------------------------------------------------------------------
+
+// INFO: Properties
+.mat-dialog-container {
+  padding: 0 !important;
+}
+.mat-dialog-content, .mat-dialog-actions:last-child {
+  margin: 0 !important;
+}
