--- a/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
+++ b/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
@@ -1,12 +1,15 @@
-<div class="header py-2 px-4">
+<div class="header py-2 px-4 mb-3">
   <div class="row align-items-center">
     <div class="col">
-      <div *ngIf="!isFirst">
+      <div *ngIf="!isFirst && formType === forms.PASSWORD">
         <span class="h5 font-weight-light">{{ headerLabels.lostPasswordLabel }}</span>
       </div>
-      <div *ngIf="isFirst">
+      <div *ngIf="isFirst && formType === forms.PASSWORD">
         <span class="d-block h5 mb-0 font-weight-light">{{ headerLabels.updatePasswordLabel }}</span>
         <span class="d-block font-weight-light small">{{ headerLabels.updatePasswordMessageLabel }}</span>
+      </div>
+      <div *ngIf="formType === 'mfa'">
+        <span class="h5 font-weight-light">{{ headerLabels.mfaCodeLabel }}</span>
       </div>
     </div>
     <div class="col-2 px-0 text-right">
@@ -17,12 +20,24 @@
   </div>
 </div>
 <mat-dialog-content class="py-4">
-  <!-- Pass Form -->
-  <cal-pass-form 
+  <!-- NOTE: Pass Form -->
+  <cal-pass-form *ngIf="formType === forms.PASSWORD"
     [isFirst]="isFirst" 
     [passLabels]="passLabels" 
     [passPolicies]="passPolicies" 
     (firstConnection)="relayFirstLogEvent($event)" 
     (lostPassword)="relayLostPassEvent($event)">
   </cal-pass-form>
+  <!-- NOTE: MFA form -->
+  <cal-mfa-setup-form *ngIf="formType === forms.MFA_SETUP"
+    [mfaSetupLabels]="mfaSetupLabels"
+    [qrCode]="qrCode" 
+    [code]="code" 
+    (saveMfa)="relaySaveMfaKeyEvent($event)">
+  </cal-mfa-setup-form>
+  <!-- NOTE: MFA form -->
+  <cal-mfa-form *ngIf="formType === forms.MFA"
+    [mfaLabels]="mfaLabels"
+    (sendMfa)="relaySendMfaCodeEvent($event)">
+  </cal-mfa-form>
 </mat-dialog-content>
