--- a/projects/login-form/src/lib/login-form.component.scss
+++ b/projects/login-form/src/lib/login-form.component.scss
@@ -8,7 +8,7 @@ mat-form-field mat-icon {
 
 // https://github.com/TerryMooreII/materialize-social/blob/master/materialize-social.less
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:500');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:500');
 
 .cal-btn {
   line-height: 35px;
